minor visual updates

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
             <img
               src="./assets/icons/triangle-right.svg"
               alt=">"
-              class="triangle-link-icon big-triangle"
+              class="triangle-link-icon big-triangle invert-icons"
             />
             <div class="hover-reveal">Lihat Lagi</div>
           </div>
