--- a/pages/layanan.html
+++ b/pages/layanan.html
@@ -17,12 +17,12 @@
     <div class="navbar">
       <div class="navbar-container bg-primary-gradient">
         <a href="../index.html">
-            <img
-              src="../assets/images/logo.png"
-              alt="BatangKab"
-              class="nav-logo"
-            />
-          </a>
+          <img
+            src="../assets/images/logo.png"
+            alt="BatangKab"
+            class="nav-logo"
+          />
+        </a>
         <div class="nav-mid">
           <div class="nav-dropdown-container">
             <div class="nav-dropdown nav-item">
@@ -187,7 +187,7 @@
               <div class="horizontal-line thin"></div>
               <a href="./visimisi.html">Visi dan Misi Pemerintahan</a>
               <div class="horizontal-line thin"></div>
-              <p>Prestasi Kerja</a>
+              <p>Prestasi Kerja</p>
             </div>
           </div>
 
@@ -198,34 +198,26 @@
             </div>
             <div class="dropdown-buffer"></div>
             <div class="dropdown-menu">
-              <p
-                >Harga Kebutuhan Pokok Masyarakat Kabupaten Batang</p
-              >
+              <p>Harga Kebutuhan Pokok Masyarakat Kabupaten Batang</p>
               <div class="horizontal-line thin"></div>
               <p>LKJIP Kabupaten Batang</p>
               <div class="horizontal-line thin"></div>
               <p>Dokumentasi Publikasi Ijin Lingkungan</p>
               <div class="horizontal-line thin"></div>
-              <p
-                >Transparansi Pengelolaan Anggaran Daerah</p
-              >
+              <p>Transparansi Pengelolaan Anggaran Daerah</p>
               <div class="horizontal-line thin"></div>
               <p>Rencana Umum Pengadaan</p>
               <div class="horizontal-line thin"></div>
               <p>Statistik Kabupaten Batang</p>
               <div class="horizontal-line thin"></div>
-              <p
-                >Transparansi dan Akuntabilitas Pengadaan Barang dan Jasa</p
-              >
+              <p>Transparansi dan Akuntabilitas Pengadaan Barang dan Jasa</p>
               <div class="horizontal-line thin"></div>
               <p
                 >Informasi Realisasi Rencana Aksi Pencegahan dan Pemberantasan
                 Korupsi</p
               >
               <div class="horizontal-line thin"></div>
-              <p
-                >Laporan Akuntabilitas Kinerja Instansi Pemerintah</p
-              >
+              <p>Laporan Akuntabilitas Kinerja Instansi Pemerintah</p>
               <div class="horizontal-line thin"></div>
               <p>e-LHKPN Pemerintah Kabupaten Batang</p>
               <div class="horizontal-line thin"></div>
@@ -262,7 +254,7 @@
     </section>
 
     <section class="main">
-      <div class="main-text-container lower-gap h-50vh jc-c">
+      <div class="main-text-container h-50vh jc-c">
         <div class="main-text-header">Lapor Bupati</div>
         <div class="main-text-desc df-jcc tac mid-width">
           Sampaikan keluhan, saran, dan aspirasi secara langsung kepada Bupati
@@ -273,7 +265,7 @@
         </a>
       </div>
       <div class="horizontal-line w-80 thin"></div>
-      <div class="main-text-container lower-gap h-50vh jc-c bg-offwhite">
+      <div class="main-text-container h-50vh jc-c bg-offwhite">
         <div class="main-text-header"> Download Informasi Penting</div>
         <div class="main-text-desc df-jcc tac mid-width">
           akses cepat bagi masyarakat untuk mengunduh dokumen-dokumen resmi,
