minor style update

--- a/pages/dinas.html
+++ b/pages/dinas.html
@@ -255,9 +255,9 @@
     </section>
 
     <section class="main big-gap">
-      <div class="main-query-container badan-container"> </div>
-      <div class="main-query-container dinas-container"> </div>
-      <div class="main-query-container lembaga-container"> </div>
+      <div class="skpd-dropdown-container badan-container"> </div>
+      <div class="skpd-dropdown-container dinas-container"> </div>
+      <div class="skpd-dropdown-container lembaga-container"> </div>
     </section>
 
     <section class="footer bg-darkgray-gradient">
