finalized kecamatan.. and badan..., updated navlinks

--- a/pages/dinas.html
+++ b/pages/dinas.html
@@ -177,11 +177,11 @@
                   <div class="horizontal-line thin"></div>
                   <a href="./profilperangkat.html">Sekretariat DPRD</a>
                   <div class="horizontal-line thin"></div>
-                  <a href="./profilperangkat.html"
+                  <a href="./dinas.html"
                     >Badan, Dinas, Kantor, & Lembaga Teknis</a
                   >
                   <div class="horizontal-line thin"></div>
-                  <a href="./profilperangkat.html">Kecamatan dan Kelurahan</a>
+                  <a href="./kecamatan.html">Kecamatan dan Kelurahan</a>
                 </div>
               </div>
 
@@ -254,7 +254,7 @@
       </div>
     </section>
 
-    <section class="main big-gap">
+    <section class="main mid-big-gap">
       <div class="skpd-dropdown-container badan-container"> </div>
       <div class="skpd-dropdown-container dinas-container"> </div>
       <div class="skpd-dropdown-container lembaga-container"> </div>
