--- a/index.html
+++ b/index.html
@@ -184,13 +184,11 @@
                   <div class="horizontal-line thin"></div>
                   <a href="./pages/profilperangkat.html">Sekretariat DPRD</a>
                   <div class="horizontal-line thin"></div>
-                  <a href="./pages/profilperangkat.html"
+                  <a href="./pages/dinas.html"
                     >Badan, Dinas, Kantor, & Lembaga Teknis</a
                   >
                   <div class="horizontal-line thin"></div>
-                  <a href="./pages/profilperangkat.html"
-                    >Kecamatan dan Kelurahan</a
-                  >
+                  <a href="./pages/kecamatan.html">Kecamatan dan Kelurahan</a>
                 </div>
               </div>
 
