--- a/pages/profilbupati.html
+++ b/pages/profilbupati.html
@@ -176,11 +176,11 @@
                   <div class="horizontal-line thin"></div>
                   <a href="./profilperangkat.html">Sekretariat DPRD</a>
                   <div class="horizontal-line thin"></div>
-                  <a href="./profilperangkat.html"
+                  <a href="./dinas.html"
                     >Badan, Dinas, Kantor, & Lembaga Teknis</a
                   >
                   <div class="horizontal-line thin"></div>
-                  <a href="./profilperangkat.html">Kecamatan dan Kelurahan</a>
+                  <a href="./kecamatan.html">Kecamatan dan Kelurahan</a>
                 </div>
               </div>
 
