init sekreatariat pages

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4/dist/css/splide.min.css"
     />
     <link rel="stylesheet" href="./assets/styles/carousel.css" />
+    <link rel="stylesheet" href="./assets/styles/splide.css" />
   </head>
   <body>
     <div class="navbar">
@@ -178,9 +179,9 @@
                 </div>
                 <div class="dropdown-buffer-vertical"></div>
                 <div class="navbar-drop-sidebar">
-                  <a href="./pages/profilperangkat.html">Sekretariat Daerah</a>
+                  <a href="./pages/sek_daerah.html">Sekretariat Daerah</a>
                   <div class="horizontal-line thin"></div>
-                  <a href="./pages/profilperangkat.html">Sekretariat DPRD</a>
+                  <a href="./pages/sek_dprd.html">Sekretariat DPRD</a>
                   <div class="horizontal-line thin"></div>
                   <a href="./pages/dinas.html"
                     >Badan, Dinas, Kantor, & Lembaga Teknis</a
