--- a/pages/dinas.html
+++ b/pages/dinas.html
@@ -173,9 +173,9 @@
                 </div>
                 <div class="dropdown-buffer-vertical"></div>
                 <div class="navbar-drop-sidebar">
-                  <a href="./profilperangkat.html">Sekretariat Daerah</a>
+                  <a href="./sek_daerah.html">Sekretariat Daerah</a>
                   <div class="horizontal-line thin"></div>
-                  <a href="./profilperangkat.html">Sekretariat DPRD</a>
+                  <a href="./sek_dprd.html">Sekretariat DPRD</a>
                   <div class="horizontal-line thin"></div>
                   <a href="./dinas.html"
                     >Badan, Dinas, Kantor, & Lembaga Teknis</a
