--- a/pages/sek_dprd.html
+++ b/pages/sek_dprd.html
@@ -172,9 +172,9 @@
                 </div>
                 <div class="dropdown-buffer-vertical"></div>
                 <div class="navbar-drop-sidebar">
-                  <a href="./profilperangkat.html">Sekretariat Daerah</a>
+                  <a href="./sek_daerah.html">Sekretariat Daerah</a>
                   <div class="horizontal-line thin"></div>
-                  <a href="./profilperangkat.html">Sekretariat DPRD</a>
+                  <a href="./sek_dprd.html">Sekretariat DPRD</a>
                   <div class="horizontal-line thin"></div>
                   <a href="./dinas.html"
                     >Badan, Dinas, Kantor, & Lembaga Teknis</a
@@ -249,13 +249,63 @@
       <div class="darken-overlay"></div>
 
       <div class="hero-main">
-        <p class="hero-title">Profil Perangkat</p>
+        <p class="hero-title">Sekretariat DPRD</p>
       </div>
     </section>
 
     <section class="main">
       <div class="main-text-container">
-        <div class="main-text-header"> Page Not Found </div>
+        <div class="main-text-header">Informasi Sekretariat DPRD Batang</div>
+        <div class="main-text-container fd-r jc-c">
+          <img
+            src="../assets/images/sekdprd.jpg"
+            alt="sekdprd"
+            class="very-bigger-img"
+          />
+
+          <div class="main-text-container-inner w-a">
+            <div class="main-desc-info-container">
+              <img
+                src="../assets/icons/location.svg"
+                alt="location"
+                class="main-desc-info-icon invert-icons"
+              />
+              <strong>Alamat</strong> : Jl. Jend. Sudirman No. 262 Batang
+            </div>
+            <div class="main-desc-info-container">
+              <img
+                src="../assets/icons/phone.svg"
+                alt="phone"
+                class="main-desc-info-icon invert-icons"
+              />
+              <strong>Telephone</strong> : (0285) 391146
+            </div>
+            <div class="main-desc-info-container">
+              <img
+                src="../assets/icons/fax.svg"
+                alt="fax"
+                class="main-desc-info-icon invert-icons"
+              />
+              <strong>Fax</strong> : (0285) 391146
+            </div>
+            <div class="main-desc-info-container">
+              <img
+                src="../assets/icons/email.svg"
+                alt="email"
+                class="main-desc-info-icon invert-icons"
+              />
+              <strong>Email</strong> : sdprd@batangkab.go.id
+            </div>
+            <div class="main-desc-info-container">
+              <img
+                src="../assets/icons/web.svg"
+                alt="web"
+                class="main-desc-info-icon invert-icons"
+              />
+              <strong>Website</strong> : setwan.batangkab.go.id
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
