--- a/pages/lambang.html
+++ b/pages/lambang.html
@@ -259,7 +259,7 @@
 
         <div class="main-text-withimg-container">
           <div class="main-text-img-container">
-            <img src="../assets/images/lambang.png" alt="Lambang Batang" />
+            <img src="../assets/images/lambang.png" alt="Lambang Batang" class="h-a"/>
             Lambang Daerah Kabupaten Batang
           </div>
 
