update kategori select

--- a/pages/lapor.html
+++ b/pages/lapor.html
@@ -356,25 +356,33 @@
 
             <div class="form-element-container">
               <label for="category-input" class="form-label">Kategori</label>
-              <select id="category-input" name="category" class="form-input">
-                <option value="" disabled selected>Pilih kategori</option>
-                <option value="lingkungan">-</option>
-                <option value="lingkungan">Lingkungan</option>
-                <option value="infrastruktur">Infrastruktur</option>
-                <option value="kesehatan">Kesehatan</option>
-                <option value="pendidikan">Pendidikan</option>
-                <option value="transportasi">Transportasi</option>
-                <option value="keamanan">Keamanan</option>
-                <option value="kebersihan">Kebersihan</option>
-                <option value="air">Air Bersih</option>
-                <option value="listrik">Listrik</option>
-                <option value="fasilitas">Fasilitas Umum</option>
-                <option value="administrasi">Administrasi</option>
-                <option value="bencana">Bencana Alam</option>
-                <option value="ekonomi">Ekonomi</option>
-                <option value="sosial">Sosial</option>
-                <option value="lainnya">Lainnya</option>
-              </select>
+              <div class="file-input-container">
+                <select
+                  id="category-input"
+                  name="category"
+                  class="select-input"
+                >
+                  <option value="" disabled selected
+                    >Pilih kategori laporan anda</option
+                  >
+                  <option value="lingkungan">-</option>
+                  <option value="lingkungan">Lingkungan</option>
+                  <option value="infrastruktur">Infrastruktur</option>
+                  <option value="kesehatan">Kesehatan</option>
+                  <option value="pendidikan">Pendidikan</option>
+                  <option value="transportasi">Transportasi</option>
+                  <option value="keamanan">Keamanan</option>
+                  <option value="kebersihan">Kebersihan</option>
+                  <option value="air">Air Bersih</option>
+                  <option value="listrik">Listrik</option>
+                  <option value="fasilitas">Fasilitas Umum</option>
+                  <option value="administrasi">Administrasi</option>
+                  <option value="bencana">Bencana Alam</option>
+                  <option value="ekonomi">Ekonomi</option>
+                  <option value="sosial">Sosial</option>
+                  <option value="lainnya">Lainnya</option>
+                </select>
+              </div>
               <div class="errormsg" id="category-error"></div>
             </div>
 
