--- a/pages/layanan.html
+++ b/pages/layanan.html
@@ -268,7 +268,7 @@
       <div class="main-text-container h-50vh jc-c bg-offwhite">
         <div class="main-text-header"> Download Informasi Penting</div>
         <div class="main-text-desc df-jcc tac mid-width">
-          akses cepat bagi masyarakat untuk mengunduh dokumen-dokumen resmi,
+          Akses cepat bagi masyarakat untuk mengunduh dokumen-dokumen resmi,
           pengumuman, dan data penting yang berkaitan dengan kebijakan dan
           layanan pemerintahan daerah.
         </div>
